--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -1442,6 +1442,7 @@
 					<string>25.IBPluginDependency</string>
 					<string>38.CustomClassName</string>
 					<string>38.IBPluginDependency</string>
+					<string>40.CustomClassName</string>
 					<string>40.IBPluginDependency</string>
 					<string>41.IBPluginDependency</string>
 					<string>44.IBPluginDependency</string>
@@ -1509,6 +1510,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UserImageView</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>TTTAttributedLabel</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1696,7 +1698,7 @@
 							<string>UIView</string>
 							<string>UITextField</string>
 							<string>UserImageView</string>
-							<string>UILabel</string>
+							<string>TTTAttributedLabel</string>
 							<string>UIView</string>
 							<string>UserImageView</string>
 							<string>StampDetailHeaderView</string>
@@ -1784,7 +1786,7 @@
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">commenterNameLabel</string>
-								<string key="candidateClassName">UILabel</string>
+								<string key="candidateClassName">TTTAttributedLabel</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">commentsView</string>
@@ -1851,6 +1853,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/StampDetailViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">TTTAttributedLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TTTAttributedLabel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
