--- a/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/StampDetailViewController.xib
@@ -516,6 +516,7 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
+						<bool key="IBUIDelaysContentTouches">NO</bool>
 					</object>
 					<object class="IBUIView" id="109901099">
 						<reference key="NSNextResponder" ref="880728759"/>
