--- a/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">11C74</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2148</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
 		<string key="IBDocument.AppKitVersion">1138.23</string>
 		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1145</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -50,7 +50,6 @@
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -195,7 +194,7 @@ MA</string>
 									<object class="IBUILabel" id="653870563">
 										<reference key="NSNextResponder" ref="728574616"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{15, 7}, {140, 25}}</string>
+										<string key="NSFrame">{{15, 8}, {140, 25}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="726550632"/>
@@ -865,7 +864,7 @@ MA</string>
 					<string>6.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
 				</object>
-				<object class="NSArray" key="dict.values">
+				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>PlaceDetailViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -955,7 +954,7 @@ MA</string>
 							<string>shelfImageView</string>
 							<string>titleLabel</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
 							<string>UILabel</string>
@@ -986,7 +985,7 @@ MA</string>
 							<string>shelfImageView</string>
 							<string>titleLabel</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBToOneOutletInfo">
 								<string key="name">categoryImageView</string>
@@ -1049,7 +1048,7 @@ MA</string>
 							<string>callButtonPressed:</string>
 							<string>reservationButtonPressed:</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>id</string>
 							<string>id</string>
@@ -1062,7 +1061,7 @@ MA</string>
 							<string>callButtonPressed:</string>
 							<string>reservationButtonPressed:</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBActionInfo">
 								<string key="name">callButtonPressed:</string>
@@ -1085,7 +1084,7 @@ MA</string>
 							<string>openTableImageView</string>
 							<string>openTableLabel</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIButton</string>
 							<string>UILabel</string>
@@ -1106,7 +1105,7 @@ MA</string>
 							<string>openTableImageView</string>
 							<string>openTableLabel</string>
 						</object>
-						<object class="NSArray" key="dict.values">
+						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBToOneOutletInfo">
 								<string key="name">callActionButton</string>
@@ -1187,7 +1186,7 @@ MA</string>
 				<string>map_inner_shadow.png</string>
 				<string>shelf_background.png</string>
 			</object>
-			<object class="NSArray" key="dict.values">
+			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{23, 50}</string>
 				<string>{21, 16}</string>
@@ -1197,6 +1196,6 @@ MA</string>
 				<string>{320, 365}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">1145</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
