--- a/platform/servers/web/templates/500.html
+++ b/platform/servers/web/templates/500.html
@@ -14,7 +14,7 @@
         
         <!-- Style -->
         <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles-temp.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="http://static.stamped.com/assets/css/styles.css" type="text/css" media="screen" />
         <link rel="shortcut icon" href="http://static.stamped.com/assets/img/favicon.ico"/>
         <link rel="apple-touch-icon" href="http://static.stamped.com/assets/img/apple-touch-icon.png"/>
         
@@ -40,7 +40,7 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="more">
-                    &copy;2011 Stamped Inc.
+                    &copy;2012 Stamped, Inc.
                 </div> 
             
         </div> <!-- /home -->
